feat: update README with enhanced windowing explanations and local execution instructions for Java 17